# ChangeLog for dev-python/pgmagick
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Mar 2012; James Rowe <jnrowe@gmail.com> pgmagick-0.5.1.ebuild:
  Switched to EAPI4.

  03 Mar 2012; James Rowe <jnrowe@gmail.com> -pgmagick-0.4.2.ebuild,
  pgmagick-0.5.1.ebuild:
  Keyworded x86.

  03 Mar 2012; James Rowe <jnrowe@gmail.com> pgmagick-0.5.1.ebuild:
  Keyworded amd64.

*pgmagick-0.5.1 (02 Feb 2012)

  02 Feb 2012; James Rowe <jnrowe@gmail.com> +pgmagick-0.5.1.ebuild:
  Version bump [524].

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  22 Sep 2011; James Rowe <jnrowe@gmail.com> -pgmagick-0.4.1.ebuild,
  pgmagick-0.4.2.ebuild:
  Keyworded x86.

  22 Sep 2011; James Rowe <jnrowe@gmail.com> pgmagick-0.4.2.ebuild:
  Keyworded amd64.

  18 Sep 2011; James Rowe <jnrowe@gmail.com> -pgmagick-0.4.ebuild,
  pgmagick-0.4.1.ebuild:
  Keyworded x86.

  17 Sep 2011; James Rowe <jnrowe@gmail.com> pgmagick-0.4.1.ebuild:
  Keyworded amd64.

*pgmagick-0.4.2 (23 Aug 2011)

  23 Aug 2011; James Rowe <jnrowe@gmail.com> +pgmagick-0.4.2.ebuild:
  Version bump [455].

*pgmagick-0.4.1 (18 Aug 2011)

  18 Aug 2011; James Rowe <jnrowe@gmail.com> +pgmagick-0.4.1.ebuild:
  Version bump [449].

  08 Aug 2011; James Rowe <jnrowe@gmail.com> -pgmagick-0.3.6.ebuild,
  pgmagick-0.4.ebuild:
  Keyworded x86.

  08 Aug 2011; James Rowe <jnrowe@gmail.com> pgmagick-0.4.ebuild:
  Keyworded amd64.

*pgmagick-0.4 (09 Jul 2011)

  09 Jul 2011; James Rowe <jnrowe@gmail.com> +pgmagick-0.4.ebuild:
  Version bump [425].

  15 Jun 2011; James Rowe <jnrowe@gmail.com> -pgmagick-0.3.5.ebuild,
  pgmagick-0.3.6.ebuild:
  Keyworded x86.

  15 Jun 2011; James Rowe <jnrowe@gmail.com> pgmagick-0.3.6.ebuild:
  Keyworded amd64.

  12 Jun 2011; James Rowe <jnrowe@gmail.com> -pgmagick-0.3.4.ebuild,
  pgmagick-0.3.5.ebuild:
  Keyworded x86.

  12 Jun 2011; James Rowe <jnrowe@gmail.com> pgmagick-0.3.5.ebuild:
  Keyworded amd64.
