@@ -1,13 +1,15 @@
-DEFINED_PHASES=compile install postinst postrm prepare setup
-DEPEND=media-gfx/graphicsmagick dev-libs/boost[python] dev-util/pkgconfig =dev-lang/python-2*
+DEFINED_PHASES=compile configure install prepare pretend test
+DEPEND=media-gfx/graphicsmagick dev-libs/boost[python] dev-util/pkgconfig python_targets_python2_5? ( dev-lang/python:2.5 ) python_targets_python2_6? ( dev-lang/python:2.6 ) python_targets_python2_7? ( dev-lang/python:2.7 )
 DESCRIPTION=Yet Another Python wrapper for GraphicsMagick
 EAPI=4
 HOMEPAGE=http://pypi.python.org/pypi/pgmagick/
+IUSE=python_targets_python2_5 python_targets_python2_6 python_targets_python2_7
 KEYWORDS=amd64 x86
 LICENSE=MIT
-RDEPEND=media-gfx/graphicsmagick dev-libs/boost[python] =dev-lang/python-2*
+RDEPEND=media-gfx/graphicsmagick dev-libs/boost[python] python_targets_python2_5? ( dev-lang/python:2.5 ) python_targets_python2_6? ( dev-lang/python:2.6 ) python_targets_python2_7? ( dev-lang/python:2.7 )
+REQUIRED_USE=|| ( python_targets_python2_5 python_targets_python2_6 python_targets_python2_7 )
 RESTRICT=test
 SLOT=0
 SRC_URI=mirror://pypi/p/pgmagick/pgmagick-0.5.1.tar.gz
-_eclasses_=distutils	15ae23f6f8219a009bfcfff7724fe727	eutils	6891f6f484e3b44a0a15e1b0c0fc9a14	jnrowe-pypi	c6b06bd5e6250ef1ef368932ebd260cf	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python	36d7e2b7aa4dce62364c72eec96610cf	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68	user	32a09e82e2f592bf88ad2fd08525166e
-_md5_=259dd8cfe2ab7a7346fa56cd8759c766
+_eclasses_=eutils	6891f6f484e3b44a0a15e1b0c0fc9a14	jnrowe-pypi	b21e6e140e73d92d8e0c0a639a9d2fe7	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python-distutils-ng	9c728fa97679b3ca2742cf8ccd260599	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68	user	32a09e82e2f592bf88ad2fd08525166e
+_md5_=d469c015967218628ade794219e70652
